; ModuleID = '/home/carl/AnghaBench/kphp-kdb/util/extr_tftp.c_parse_port_range.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/util/extr_tftp.c_parse_port_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%d-%d\00", align 1
@PRIVILEGED_TCP_PORTS = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [65 x i8] c"min port number should be greater than PRIVILEGED_TCP_PORTS(%d)\0A\00", align 1
@.str.2 = private unnamed_addr constant [43 x i8] c"max port number should be less than 65536\0A\00", align 1
@min_port = common dso_local global i32 0, align 4
@max_port = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @parse_port_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_port_range(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @sscanf(i8* %6, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32* %4, i32* %5)
  %8 = icmp ne i32 %7, 2
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %32

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp sgt i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 -1, i32* %2, align 4
  br label %32

15:                                               ; preds = %10
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @PRIVILEGED_TCP_PORTS, align 4
  %18 = icmp sle i32 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32, i32* @stderr, align 4
  %21 = load i32, i32* @PRIVILEGED_TCP_PORTS, align 4
  %22 = call i32 (i32, i8*, ...) @fprintf(i32 %20, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  store i32 -1, i32* %2, align 4
  br label %32

23:                                               ; preds = %15
  %24 = load i32, i32* %5, align 4
  %25 = icmp sge i32 %24, 65536
  br i1 %25, label %26, label %29

26:                                               ; preds = %23
  %27 = load i32, i32* @stderr, align 4
  %28 = call i32 (i32, i8*, ...) @fprintf(i32 %27, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.2, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %32

29:                                               ; preds = %23
  %30 = load i32, i32* %4, align 4
  store i32 %30, i32* @min_port, align 4
  %31 = load i32, i32* %5, align 4
  store i32 %31, i32* @max_port, align 4
  store i32 0, i32* %2, align 4
  br label %32

32:                                               ; preds = %29, %26, %19, %14, %9
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @sscanf(i8*, i8*, i32*, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
